[add] Add doc for /timeLog/unfinished
